--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,8 +140,10 @@
 
 
 body {
-  font-family: "Inconsolata", monospace;
+  font-family: "GTAmerica";
+  font-weight: 200;
   color: #0d1e2d;
+  letter-spacing: -0.04em;
 }
 
 a {
@@ -162,6 +164,7 @@ h6,
 .font-heading {
   font-family: "Matter";
   font-weight: 300;
+  letter-spacing: 0em;
 }
 
 .section {
@@ -472,6 +475,19 @@ h6,
     transform: rotate(360deg);
   }
 }
+
+
+figcaption {
+  color: #2d2d2d;
+  font-family: "GTAmerica";
+  font-weight: normal;
+  font-style: normal;
+  letter-spacing: 0em;
+  text-transform: uppercase;
+  font-size: 10px;
+  padding-top: 10px;
+}
+
 
 /*--------------------------------------------------------------
 # Header
