--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -488,6 +488,12 @@ figcaption {
   padding-top: 10px;
 }
 
+pre code {
+  background-color: #eee;
+  border: 1px solid #999;
+  display: block;
+  padding: 20px;
+}
 
 /*--------------------------------------------------------------
 # Header
